# anomaly_detection_padim

./: PadimAD.py  README.md  anomaly_detection_ui.py  main.py  pyproject.toml
ai/: DTO.py  feature_extraction.py
config/: DTO.py
data/: transform.py
gui/: main_frame.py
gui/gui_components/: train_parameters_widget.py
gui/gui_enums/: ad_status.py
src/: PadimAD.py  anomaly_detection_ui.py  ressource_handling.py  ressources.json
src/ai/: DTO.py  feature_extraction.py
src/constants/: constants_ai.py
src/data/: dataset.py
vision/: rendering.py
