[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "padim_ad"
version = "0.0.3"
authors = [
  { name="Stephan Pirner", email="stephan.pirner93@gmail.com" },
]
description = "Padim Anomaly Detection package for image anomaly detection and localization"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# license = "MIT"
# license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Pirner/anomaly_detection_padim"
Issues = "https://github.com/Pirner/anomaly_detection_padim/issues"